fixed weird flickering in waybar on switching workspaces and removed a bunch of unneeded stuff

--- a/home/wayland/waybar/style.css
+++ b/home/wayland/waybar/style.css
@@ -1,297 +1,137 @@
 * {
-font-family: "JetBrainsMono Nerd Font";
-font-weight: bold;
-min-height: 0;
-/* set font-size to 100% if font scaling is set to 1.00 using nwg-look */
-font-size: 97%;
-font-feature-settings: '"zero", "ss01", "ss02", "ss03", "ss04", "ss05", "cv31"';
-padding: 1px;
+    font-family: "JetBrainsMono Nerd Font";
+    font-weight: bold;
+    min-height: 0;
+    /* set font-size to 100% if font scaling is set to 1.00 using nwg-look */
+    font-size: 97%;
+    font-feature-settings: '"zero", "ss01", "ss02", "ss03", "ss04", "ss05", "cv31"';
+    padding: 1px;
 }
 
 @import "./frappe.css";
 
+button label {
+    all: unset;
+}
+
 window#waybar {
-  /*background: transparent;*/
-  /*border: 2px solid @overlay0;*/
-  background: @theme_base_color;
-  /*border-radius: 10px;*/
+    background: @base;
+    border-radius: 0px;
 }
 
 window#waybar.hidden {
-  opacity: 0.2;
+    opacity: 0.2;
 }
 
 #waybar.empty #window {
-  background: none;
+    background: none;
 }
 
-/* This section can be use if you want to separate waybar modules */
-.modules-left, .modules-center, .modules-right {
-	background: @theme_base_color; 
- 	/*border: 0.5px solid @overlay0;*/
-	padding-top: 2px;
-	padding-bottom: 2px;
-	padding-right: 4px;
-	padding-left: 4px;
-	/* border-radius: 10px; */
-
-} 
-
-.modules-left, .modules-right {
-  	/*border: 1px solid @blue;*/
-	padding-top: 2px;
-	padding-bottom: 2px;
-	padding-right: 4px;
-	padding-left: 4px;
-} 
-
 #backlight,
-#backlight-slider,
 #battery,
 #bluetooth,
 #clock,
 #clock-date
 #cpu,
-#disk,
-#idle_inhibitor,
-#keyboard-state,
 #memory,
-#mode,
-#mpris,
 #network,
 #pulseaudio,
-#pulseaudio-slider,
-#taskbar button,
-#taskbar,
-#temperature,
 #tray,
-#window,
 #workspaces
 {
     padding: 0 8px;
+    margin: 2px 2px;
 }
 
 #idle_inhibitor {
-  color: @blue;
+    color: @blue;
 }
 
 #bluetooth,
 #backlight {
-  color: @blue;
+    color: @blue;
 }
 
 #battery {
-  color: @green;
-}
-
-@keyframes blink {
-  to {
-    color: @surface0;
-  }
+    color: @green;
 }
 
 #battery.critical:not(.charging) {
-  background-color: @red;
-  color: @theme_text_color;
-  animation-name: blink;
-  animation-duration: 0.5s;
-  animation-timing-function: linear;
-  animation-iteration-count: infinite;
-  animation-direction: alternate;
-  box-shadow: inset 0 -3px transparent;
-}
-
-#custom-updates {
-  color: @blue
-}
-
-#language {
-  color: @blue
+    background-color: @red;
+    color: @text;
+    animation-name: blink;
+    animation-duration: 0.5s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    box-shadow: inset 0 -3px transparent;
 }
 
 #clock {
-  color: @yellow;
+    color: @yellow;
 }
 
 #cpu {
-  color: @green;
+    color: @green;
 }
 
-#custom-keyboard,
 #memory {
-  color: @sky;
-}
-
-#disk {
-  color: @sapphire;
-}
-
-#temperature {
-  color: @teal;
-}
-
-#temperature.critical {
-  background-color: @red;
+    color: @sky;
 }
 
 #tray > .passive {
-  -gtk-icon-effect: dim;
+    -gtk-icon-effect: dim;
 }
 #tray > .needs-attention {
-  -gtk-icon-effect: highlight;
-}
-
-#keyboard-state {
-  color: @flamingo;
+    -gtk-icon-effect: highlight;
 }
 
 #workspaces button {
-    all: initial;
     box-shadow: none;
-	text-shadow: none;
-    padding: 0px;
+    text-shadow: none;
+    padding: 0 8px;
+    margin: 0 4px 0 0;
+    border: 1px solid @flamingo;
     border-radius: 9px;
     padding-left: 6px;
     padding-right: 6px;
-}
-
-#workspaces button:hover {
-	border-radius: 10px;
-	color: @overlay0;
-	background-color: @surface0;
-    padding-left: 2px;
-    padding-right: 2px;
-}
-
-#workspaces button.persistent {
-    color: @surface1;
-    border-radius: 10px;
+    color: @text;
+    background-color: @base;
 }
 
 #workspaces button.active {
-	color: #ef9f76;
-	border-radius: 10px;
-    padding-left: 8px;
-    padding-right: 8px;
+    color: #ef9f76;
 }
 
 #workspaces button.focused {
     color: #ef9f76;
-  	border-radius: 10px;
-    padding-left: 8px;
-    padding-right: 8px;
 }
 
 #workspaces button.urgent {
-	color: @red;
- 	border-radius: 0px;
+    color: @red;
 }
 
-#taskbar button.active {
-    padding-left: 8px;
-    padding-right: 8px;
-    animation: gradient_f 20s ease-in infinite;
-    transition: all 0.3s cubic-bezier(.55,-0.68,.48,1.682);
-}
-
-#taskbar button:hover {
-    padding-left: 2px;
-    padding-right: 2px;
-    animation: gradient_f 20s ease-in infinite;
-    transition: all 0.3s cubic-bezier(.55,-0.68,.48,1.682);
-}
-
-#custom-cava_mviz {
-	color: @pink;
-}
-
-#custom-menu {
-  color: @rosewater;
-}
-
-#custom-power {
-  color: @red;
-}
-
-#custom-updater {
-  color: @red;
-}
-
-#custom-light_dark {
-  color: @blue;
-}
-
-#custom-weather {
-  color: @lavender;
-}
-
-#custom-lock {
-  color: @maroon;
-}
 
 #pulseaudio {
-  color: @sapphire;
+    color: @sapphire;
 }
 
 #pulseaudio.bluetooth {
-  color: @pink;
+    color: @pink;
 }
 #pulseaudio.muted {
-  color: @red;
+    color: @red;
 }
 
 #window {
-  color: @mauve;
-}
-
-#custom-waybar-mpris {
-  color:@lavender;
+    color: @mauve;
 }
 
 #network {
-  color: @teal;
+    color: @teal;
 }
 #network.disconnected,
 #network.disabled {
-  background-color: @surface0;
-  color: @text;
-}
-#pulseaudio-slider slider {
-	min-width: 0px;
-	min-height: 0px;
-	opacity: 0;
-	background-image: none;
-	border: none;
-	box-shadow: none;
-}
-
-#pulseaudio-slider trough {
-	min-width: 80px;
-	min-height: 5px;
-	border-radius: 5px;
-}
-
-#pulseaudio-slider highlight {
-	min-height: 10px;
-	border-radius: 5px;
-}
-
-#backlight-slider slider {
-	min-width: 0px;
-	min-height: 0px;
-	opacity: 0;
-	background-image: none;
-	border: none;
-	box-shadow: none;
-}
-
-#backlight-slider trough {
-	min-width: 80px;
-	min-height: 10px;
-	border-radius: 5px;
-}
-
-#backlight-slider highlight {
-	min-width: 10px;
-	border-radius: 5px;
+    background-color: @surface0;
+    color: @text;
 }
